--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.0.1",
+    "bluebird": "^3.4.7",
     "debug": "^2.2.0",
     "dockerode": "^2.3.1",
     "dockerode-optionator": "^1.1.4",
@@ -22,12 +23,12 @@
     "event-stream": "^3.3.4"
   },
   "devDependencies": {
-    "apidoc": "^0.13.1",
+    "apidoc": "^0.17.5",
     "babel-cli": "^6.11.4",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
     "babel-register": "^6.11.6",
-    "snazzy": "^1.0.1",
+    "snazzy": "^6.0.0",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.0"
   }
