--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/index.js",
     "lint": "snazzy lib",
     "test": "npm run lint && node test | tap-spec",
+    "pretest": "npm run build",
     "docs": "apidoc -i lib/ -o docs/",
     "build": "babel -s -d dist lib",
     "watch": "babel -sw -d dist lib"
